--- a/CurricoFormhtml.html
+++ b/CurricoFormhtml.html
@@ -39,7 +39,7 @@
       <br>
 
       <div class="features">
-        <button type="button" class="cancelbtn"><a href="CurricoWebsite.html">Back</a></button> <!--Change submitbtn class in css-->
+        <button type="button" class="cancelbtn"><a href="index.html">Back</a></button> <!--Change submitbtn class in css-->
         <input type="button" id="sub" value="Submit" onclick="saveFile()">
         <input type="reset" value="Reset">
       </div>
