--- a/AboutUsCurrico.html
+++ b/AboutUsCurrico.html
@@ -11,7 +11,7 @@
 
     <nav class="site-nav">
       <ul class="group">
-        <li><a href="CurricoWebsite.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="AboutUsCurrico.html">About Us</a></li>
         <li><a href="CurricoContactUs.html">Contact Us</a></li>
       </ul>
