--- a/CurricoSignInhtml.html
+++ b/CurricoSignInhtml.html
@@ -21,8 +21,8 @@
       </label>
   
       <div class="clearfix">
-        <button type="button" class="cancelbtn"><a href="CurricoWebsite.html">Cancel</a></button>
-        <button type="submit button" class="signupbtn"><a href="CurricoWebsite.html">Sign Up</a></button>
+        <button type="button" class="cancelbtn"><a href="index.html">Cancel</a></button>
+        <button type="submit button" class="signupbtn"><a href="index.html">Sign Up</a></button>
       </div>
       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
     </div>
