--- a/SubmitSuccesspage.html
+++ b/SubmitSuccesspage.html
@@ -8,7 +8,7 @@
     </div>
           <!-- <div class="clear"></div> -->
       <div class="homebutton" style="text-align: center;">
-        <p><a href="CurricoWebsite.html" class="homelink">HOME</a></p>
+        <p><a href="index.html" class="homelink">HOME</a></p>
       </div>
     </div>
     <footer>
