--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col col-sm-6 col-lg-3">
             <!-- box-a -->
             <div class="box-a">
-              <a href="CurricoContactUs.html"><p>CONTACT US</p></a>
+              <a href="ContactUs.html"><p>CONTACT US</p></a>
             </div>
             <!-- /box-a -->
           </div>
