--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       <!-- col -->
       <div class="col col-md-4 sidebar">
         <h3>Help Us Connect You With the Right Organization!</h3>
-        <p class="connectinfo">There is a breadth of organizations with Currico that would love to have you join them.</p>
+        <p class="connectinfo">There is a breath of organizations with Currico that would love to have you join them.</p>
 
         <div class="interest box-a">
-              <p><a href="CurricoFormhtml.html"><b>Click Here to Enter Your Interests</b></a</p>
+              <p><a href="Form.html"><b>Click Here to Enter Your Interests</b></a</p>
         </div>
 
         <div class="fetchmap box-a">
