--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-<link href="CurricoWebsiteStylesheet.css" rel="stylesheet">
+<link href="indexStylesheet.css" rel="stylesheet">
 
 <header class="section">
   <img src="https://cdn.discordapp.com/attachments/756341797248172063/756682767709765653/8de9a807-0e86-460f-af88-a6925008e2f1_200x200.png" width="200" height="200">
@@ -29,7 +29,7 @@
           <div class="col col-sm-6 col-lg-3">
             <!-- box-a -->
             <div class="box-a">
-              <a href="CurricoWebsite.html"><p>HOME</p></a>
+              <a href="index.html"><p>HOME</p></a>
             </div>
             <!-- /box-a -->
           </div>
@@ -39,7 +39,7 @@
           <div class="col col-sm-6 col-lg-3">
             <!-- box-a -->
             <div class="box-a">
-              <p><a href="CurricoSignInhtml.html">SIGN IN</a></p>
+              <p><a href="SignIn.html">SIGN IN</a></p>
             </div>
             <!-- /box-a -->
           </div>
@@ -49,7 +49,7 @@
           <div class="col col-sm-6 col-lg-3">
             <!-- box-a -->
             <div class="box-a">
-              <a href="AboutUsCurrico.html"><p>OUR TEAM</p></a>
+              <a href="AboutUs.html"><p>OUR TEAM</p></a>
             </div>
             <!-- /box-a -->
           </div>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="fetchmap box-a">
-              <p><a href="testing3.html"><b>Fetch Map</b></a></p>
+              <p><a href="map.html"><b>Fetch Map</b></a></p>
         </div>
       </div>
       <!-- /col -->
