--- a/ContactUsSuccess.html
+++ b/ContactUsSuccess.html
@@ -4,7 +4,7 @@
     <div class="card">
       <h1 class="title">Thank You For Your Input!</h1>
       <div class="paragraph">
-        <p>We will try to get back to you as soon as we can. For now, go Home and explore what our website has in store for you!</p>
+        <p>We will try to get back to you as soon as we can. For now, explore what our website has in store for you!</p>
     </div>
           <!-- <div class="clear"></div> -->
       <div class="homebutton" style="text-align: center;">
