--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="col col-sm-6 col-lg-3">
             <!-- box-a -->
             <div class="box-a">
-              <a href="index.html"><p>LMAO</p></a>
+              <a href="index.html"><p>HOME</p></a>
             </div>
             <!-- /box-a -->
           </div>
