--- a/Form.html
+++ b/Form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="formstylesheet.css" rel="stylesheet">
+<link href="formsstylesheet.css" rel="stylesheet">
 
 <form action="#" style="border:1px solid #ccc" method="get"> <!--Change the action attribute to the Map API location-->
     <div class="container">
